FEAT: Gestion des utilisateurs Edition et show implÃ©mentÃs

--- a/src/UserBundle/Resources/views/User/new.html.twig
+++ b/src/UserBundle/Resources/views/User/new.html.twig
@@ -1,5 +1,5 @@
 {% trans_default_domain 'gestion_utilisateur_page' %}
-{% extends '@App/Page/Base/crud.html.twig' %}
+{% extends '@App/Base/base.html.twig' %}
 
 {% set form_title = 'gestion_utilisateur.page.title.creation' | trans %}
 
