--- a/src/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register.html.twig
@@ -5,5 +5,5 @@
 {% endblock title %}
 
 {% block page_content %}
-    {% include "UserBundle:Registration:register_content.html.twig" %}
+    {% include "UserBundle:Registration:register_content.html.twig"  with {'submitUrl': submitUrl}%}
 {% endblock %}
