--- a/src/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -15,7 +15,7 @@
                     </div>
                     <div class="form-bottom">
 
-                        <form action="{{ path('fos_user_registration_register') }}" method="POST" class="fos_user_registration_register">
+                        <form action="{{ submitUrl }}" method="POST" class="fos_user_registration_register">
 
                             <div class="form-group">
                                 {{ form_label(form.groups) }}
