--- a/src/UserBundle/Resources/views/User/show.html.twig
+++ b/src/UserBundle/Resources/views/User/show.html.twig
@@ -1,66 +1,50 @@
-{% trans_default_domain 'gestion_utilisateur_page' %}
-{% extends '@App/Page/Base/base.html.twig' %}
-
-{% block title %}
-    {{ parent() ~ " " ~ 'gestion_utilisateur.page.title.details' | trans }}
-{% endblock title %}
+{% extends '@App/Base/base.html.twig' %}
 
 {% block page_content %}
 
-    <div class="row bg-color-cil-fade margin-auto-15">
-        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad" >
-
-            <h3 class="text-color-cil">{{ 'gestion_utilisateur.page.title.consultation' | trans }}</h3>
-            <hr>
-            <div class="panel panel-info">
-                <div class="bg-color-cil padding-10 text-center">
-                    <h3 class="panel-title text-color-white">{{ user.firstname~" "~user.lastname }}</h3>
-                </div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-md-3 col-lg-3 " align="center">
-                            <i class="fa fa-user font-size-150px" aria-hidden="true"></i>
-                        </div>
-                        <div class=" col-md-9 col-lg-9 ">
-                            <table class="table table-user-information">
-                                <tbody>
-                                <tr>
-                                    <td>{{ 'gestion_utilisateur.page.data_label.mail' | trans }}</td>
-                                    <td class="text-info">{{ user.email }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'gestion_utilisateur.page.data_label.telephone' | trans }}</td>
-                                    <td>{{ user.phone }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'gestion_utilisateur.page.data_label.fax' | trans }}</td>
-                                    <td>{{ user.fax }}</td>
-                                </tr>
-                                <tr>
-                                    <td>{{ 'gestion_utilisateur.page.data_label.langue' | trans }}</td>
-                                    <td>{{ user.language | upper }}</td>{#
-                                    <td>{{ 'gestion_utilisateur.page.data_label.derniere_connexion' | trans }}</td>
-                                    {% if 'en'==user.language %}
-                                        {% set preferedLanguage = 'gb' %}
-                                    {% else %}
-                                        {% set preferedLanguage = user.language %}
-                                    {% endif %}
-                                    <td><span class="flag-icon {{ 'flag-icon-'~preferedLanguage }}"></span></td>#}
-                                </tr>
-                                <tr>
-                                    <td>{{ 'gestion_utilisateur.page.data_label.derniere_connexion' | trans }}</td>
-                                    <td>{% if user.lastLogin %}{{ user.lastLogin|date() }}{% endif %}</td>
-                                </tr>
-
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="row">
+        <h1 class="text-left title-text margin-left-10">
+            Utilisateur
+        </h1>
+        <hr>
     </div>
 
-    {% include 'AppBundle::Templates/confirm-modal.html.twig' with {'url': path('cil_user_delete', { 'id': user.id }), 'message':'gestion_utilisateur.page.message.confirmation_suppression' | trans({'%property%':user.firstname~' '~user.lastname}, 'gestion_utilisateur_page') }%}
+    <div class="row">
+        <div class="col-md-12">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th class="text-center">Nom Complet</th>
+                        <th class="text-center">Email</th>
+                        <th class="text-center">Dernière connexion</th>
+                        <th class="text-center">Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                <tr>
+                    <td>{{ user.getFullName() }}</td>
+                    <td>{{ user.email }}</td>
+                    <td>{{ user.lastLogin }}</td>
+                    <td>
+                        <a  class="btn btn-info"
+                            title="Retour à la liste des utilisateur"
+                            href="{{ path('user_list') }}">
+                            <i class="fa fa-arrow-circle-right"></i>
+                        </a>
+                        <a  class="btn btn-success"
+                            title="Modifier l'utilisateur {{ user.getFullName() }}"
+                            href="{{ path('user_edit', { 'id': user.id }) }}">
+                            <i class="fa fa-pencil-square-o"></i>
+                        </a>
+                        <a  class="btn btn-danger"
+                            title="Supprimer l'utilisateur {{ user.getFullName() }}"
+                            href="{{ path('user_delete', { 'id': user.id }) }}">
+                            <i class="fa fa-minus"></i>
+                        </a>
+                    </td>
+                </tbody>
+            </table>
+        </div>
+    </div>
 
 {% endblock %}
