--- a/src/AppBundle/Resources/views/Panier/panier.html.twig
+++ b/src/AppBundle/Resources/views/Panier/panier.html.twig
@@ -98,7 +98,7 @@
                         </tr>
                         <tr>
                             <td class="pull-left">
-                                <a href="{{ path('categorie_all') }}" class="btn btn-warning">
+                                <a href="{{ path('categorie_produit_client_list') }}" class="btn btn-warning">
                                     <i class="fa fa-angle-left"></i> Continuez vos achats
                                 </a>
                             </td>
