--- a/src/AppBundle/Resources/views/Categorie/list.html.twig
+++ b/src/AppBundle/Resources/views/Categorie/list.html.twig
@@ -2,14 +2,14 @@
 {% extends "@App/Base/base.html.twig" %}
 
 {% block title %}
-    {{ parent() ~ " " ~ 'Liste des produits' }}
+    {{ parent() ~ " " ~ 'Liste des catégories' }}
 {% endblock title %}
 
 {% block page_content %}
 
     <div class="row">
         <h1 class="text-left title-text margin-left-10">
-            Liste des produits
+            Liste des catégories
         </h1>
         <hr>
     </div>
@@ -18,8 +18,8 @@
         <div class="col-md-12 margin-bottom-20">
             <a
                     class="btn btn-success"
-                    href="{{ path('produit_new') }}">
-                <i class="fa fa-plus"></i>&nbsp;Ajouter un produit
+                    href="{{ path('categorie_produit_new') }}">
+                <i class="fa fa-plus"></i>&nbsp;Ajouter une catégorie
             </a>
         </div>
         <div class="col-md-12">
