--- a/src/AppBundle/Resources/views/Produit/produits_par_categorie.html.twig
+++ b/src/AppBundle/Resources/views/Produit/produits_par_categorie.html.twig
@@ -20,7 +20,7 @@
             <div class="col-lg-12">
                 <div class="row">
                     <div class="col-md-2 margin-bottom-10">
-                        <a href="{{ path('categorie_all') }}" class="btn btn-default pull-left">
+                        <a href="{{ path('categorie_produit_client_list') }}" class="btn btn-default pull-left">
                             <i class="fa fa-chevron-circle-left"></i>
                             Retour aux catégories
                         </a>
