FEAT: AJout du client lors du passage de la commande Apres le panier, le client saisi ses coordonnees avant que la commande ne soit passee

--- a/src/AppBundle/Resources/views/Base/base.html.twig
+++ b/src/AppBundle/Resources/views/Base/base.html.twig
@@ -25,7 +25,7 @@
             {% endblock %}
             <div class="container-fluid">
 
-                {% for label, messages in app.flashes(['success', 'error']) %}
+                {% for label, messages in app.flashes(['success', 'error', 'info']) %}
                     {% for message in messages %}
                         <div class="alert alert-{{ label }} alert-dismissable">
                             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
