--- a/src/AppBundle/Resources/views/Panier/panier.html.twig
+++ b/src/AppBundle/Resources/views/Panier/panier.html.twig
@@ -16,7 +16,7 @@
 
     <div class="row">
         <div class="col-md-12">
-            {{ form_start(cartForm, {'action': path('facture_create'), 'method': 'POST'}) }}
+            {{ form_start(cartForm, {'action': path('client_new'), 'method': 'POST'}) }}
                 <table id="cart" class="table table-hover table-condensed">
 
                     <thead>
