FIX: Correction erreur checkmailAction parameters after update sf

--- a/src/AppBundle/Resources/views/Produit/list.html.twig
+++ b/src/AppBundle/Resources/views/Produit/list.html.twig
@@ -16,9 +16,8 @@
 
     <div class="row">
         <div class="col-md-12 margin-bottom-20">
-            <a
-                    class="btn btn-success"
-                    href="{{ path('produit_new') }}">
+            <a class="btn btn-success"
+               href="{{ path('produit_new') }}">
                 <i class="fa fa-plus"></i>&nbsp;Ajouter un produit
             </a>
         </div>
