--- a/src/AppBundle/Resources/views/Base/nav.html.twig
+++ b/src/AppBundle/Resources/views/Base/nav.html.twig
@@ -38,7 +38,7 @@
                             {% if is_granted('ROLE_ADMIN') %}
                                 <span class="text-danger text-bold"><i>&nbsp;{{ app.user.getRole() }}</i></span>
                             {% endif %}
-                            <span class="glyphicon glyphicon-chevron-down"></span>
+                            <i class="fa fa-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu">
                             <li>
@@ -46,7 +46,7 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <p class="text-center">
-                                                <i class="glyphicon glyphicon-user icon-size text-primary"></i>
+                                                <i class="fa fa-user fa-5x text-primary"></i>
                                             </p>
                                         </div>
                                         <div class="col-lg-8">
